--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -5,133 +5,38 @@
     padding: 0.5rem;
     height: 8vh;
     min-height: 3rem;
-    background-color: hsl(225, 6%, 15.5%); // new line added here
+    // background-color: hsl(225, 6%, 15.5%); // new line added here
+    background-color: #edeaff;
 
-    .nav{
-        position: fixed;
-        top:0;
-        bottom: 0;
-        left: 0;
-        width: 260px;
-        z-index: 100;
-        transform: translateX(-100%);
-        transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
-        color: white;
-        background-color: hsl(225, 6%, 13%); //chamged here
-        box-shadow: 1px 2px 15px #1f1f1f;
+    .header__title{
+        font-size: 1.75rem;
+        // color: white;
+        color: #303030;
+        // opacity: 0.7;
+        letter-spacing: 2px;
+        padding-left: 0.75rem;
 
-        .nav-list{
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            margin-top: 4rem;
-            display: flex;
-            flex-direction: column;
-
-            .nav-list__item{
-                font-size: 1.1rem;
-                padding: 1rem;
-                letter-spacing: 2px;
-                opacity: 0.8;
-            }
-
-            a{
-                color: inherit;
-                text-decoration: none;
-
-                &:hover{
-                    opacity: 0.6;
-                }
-            }
+        a{
+            color: inherit;
+            text-decoration: none;
         }
     }
 
     .avatar{
-        margin-left: auto;
-        width: 2.25rem !important;
         height: 2.25rem !important;
+        width: 2.25rem !important;
+        margin-right: 0.5rem;
     }
 }
 
-// toggle btn style
-.toggle-btn{
-    padding: 0.5rem;
-    background-color: transparent;
-    border: none;
-    position: relative;
-    // top: 1rem;
-    // left: 0.5rem;
-    z-index: 1000;
-    cursor: pointer;
-
-    .hamburger{
-        display: block;
-        position: relative;
-
-        &::before,
-        &::after,
-        &{
-            // background-color: #404040;
-            background-color: #cecece;
-            width: 2rem;
-            height: 3px;
-            border-radius: 1rem;
-            transition: transform 250ms ease-in-out;
-        }
-
-        &::before,
-        &::after{
-            content: '';
-            position: absolute;
-            left: 0;
-            right: 0;
-        }
-
-        &::before{top: 7px;}
-        &::after{bottom: 7px;}
-    }
-}
-
-.nav-open .nav {
-    transform: translateX(0);
-}
-
-.nav-open .nav-toggle {
-    position: fixed;
-}
-
-.nav-open .hamburger {
-    transform: rotate(.625turn);
-    
-    &,
-    &::before{
-        background-color: #d6d6d6;
-    }
-}
-
-.nav-open .hamburger::before {
-    transform: rotate(90deg) translateX(-7px);
-}
-
-.nav-open .hamburger::after {
-    opacity: 0;
-}
-
-// Media queries
 @media (min-width: 800px) {
-    .app-container{
-        margin-left: 260px;
-    }
-
     .header{
-        .nav{
-            transform: translateX(0);
-            box-shadow: none;
-            transition: none;
+        .header__title{
+            padding-left: 1.25rem;
         }
-    }
 
-    .toggle-btn{
-        display: none;
+        .avatar{
+            margin-right: 1rem;
+        }
     }
 }
