--- a/src/components/Scrim.scss
+++ b/src/components/Scrim.scss
@@ -9,21 +9,31 @@
     height: 92vh;
 }
 
-.output-pane{
-    position: absolute;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
+.output-pane-container{
+    position: fixed;
+    background-color: rgba($color: #000000, $alpha: 0.3);
     display: none;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    top: 2rem;
-    left: 2rem;
-    bottom: 2rem;
-    right: 2rem;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 10000;
-    overflow: auto;
-    resize: both;
+
+    .output-pane{
+        position: relative;
+        top: 1rem;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        overflow: auto;
+        resize: both;
+        width: 95%;
+        height: 95%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     .output-pane-navigations{
         border-top-left-radius: 8px;
@@ -73,5 +83,135 @@
             }
             cursor: pointer;
         }
+    }
+}
+
+// Nav styling
+.nav{
+    position: fixed;
+    top:8vh;
+    bottom: 0;
+    left: 0;
+    width: 260px;
+    z-index: 100;
+    transform: translateX(-100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+    color: white;
+    background-color: hsl(225, 6%, 13%); //changed here
+    box-shadow: 1px 2px 15px #1f1f1f;
+
+    .nav-list{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        margin-top: 4rem;
+        display: flex;
+        flex-direction: column;
+
+        .nav-list__item{
+            font-size: 1.1rem;
+            padding: 1rem;
+            letter-spacing: 2px;
+            opacity: 0.8;
+        }
+
+        a{
+            color: inherit;
+            text-decoration: none;
+
+            &:hover{
+                opacity: 0.6;
+            }
+        }
+    }
+}
+
+// toggle btn style
+.toggle-btn{
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 1.125rem;
+    left: 0.5rem;
+    z-index: 1000;
+    cursor: pointer;
+
+    .hamburger{
+        display: block;
+        position: relative;
+
+        &::before,
+        &::after,
+        &{
+            // background-color: #404040;
+            background-color: #cecece;
+            width: 2rem;
+            height: 3px;
+            border-radius: 1rem;
+            transition: transform 250ms ease-in-out;
+        }
+
+        &::before,
+        &::after{
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+        }
+
+        &::before{top: 7px;}
+        &::after{bottom: 7px;}
+    }
+}
+
+.nav-open .nav {
+    transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+    
+    &,
+    &::before{
+        background-color: #d6d6d6;
+    }
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-7px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
+// Media queries
+@media (min-width: 800px) {
+    .pane{
+        margin-left: 260px;
+    }
+
+    // .output-pane{
+    //     left: unset;
+    //     // max-width: 93vw;
+    // }
+
+    .nav{
+        transform: translateX(0);
+        box-shadow: none;
+        transition: none;
+
+        .nav-list{
+            margin-top: 2.5rem;
+        }
+    }
+    
+    .toggle-btn{
+        display: none;
     }
 }
