--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
+    position: relative;
+    background-color: #E7E4FC;
 }
 
 iframe{
