--- a/src/components/NewScrim.scss
+++ b/src/components/NewScrim.scss
@@ -2,20 +2,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: white;
+    max-width: 600px;
+    margin-top: 2.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2rem;
+    border-radius: 0.5rem;
 
     .new-scrim__title{
         margin:0;
         padding: 0;
         margin-bottom: 1.5rem;
+        text-align: center;
     }
 
     .new-scrim-input{
         display: inline-block;
         width: 100%;
-        max-width: 600px;
+        max-width: 450px;
         height: 3rem;
         outline: none;
-        border: none;
+        border: 1px solid #c4c4c4;
         border-radius: 0.5rem;
         padding: 0.75rem;
         font-size: 1rem;
@@ -29,6 +37,10 @@
 
     .new-scrim__btn{
         padding: 1rem 2rem;
+        width: 100%;
+        max-width: 450px;
+        margin-left: auto;
+        margin-right: auto;
         background-color: #4267b2;
         color: white;
         border: none;
@@ -38,6 +50,7 @@
         font-size: 0.8rem;
         border-radius: 0.5rem;
         margin-top: 1.5rem;
+        margin-bottom: 1rem;
         cursor: pointer;
 
         &:hover{
@@ -48,5 +61,11 @@
             cursor: not-allowed;
             background-color: #4267b2;
         }
+    }
+}
+
+@media (min-width: 800px) {
+    .new-scrim{
+        margin-top: 0;
     }
 }
