--- a/src/components/ScrimCard.scss
+++ b/src/components/ScrimCard.scss
@@ -25,6 +25,73 @@
             opacity: 0.7;
         }
     }
+
+    .card-overlay{
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba($color: #000000, $alpha: 0.7);
+        display: flex;
+        justify-content: center;
+        display: none;
+
+        .update-title-form{
+            position: relative;
+            width: 100%;
+            max-width: 500px;
+            margin: 0 1rem;
+            top: 5rem;
+            align-self: flex-start;
+            background-color: white;
+            padding: 1.5rem;
+            border-radius: 0.5rem;
+
+            .update-title{
+                text-align: center;
+                margin-top: 0;
+            }
+
+            .update-title-input{
+                width: 100%;
+                height: 3rem;
+                padding: 0.5rem 1rem;
+                border-radius: 0.5rem;
+                outline: none;
+                border: none;
+                background-color: #ececec;;
+            }
+
+            .update-btns{
+                display: flex;
+                justify-content: space-evenly;
+                margin-top: 2.5rem;
+
+                button{
+                    padding: 0.75rem 1.5rem;
+                    background: #303030;
+                    color: white;
+                    border: none;
+                    cursor: pointer;
+                    border-radius: 0.5rem;
+                    letter-spacing: 2px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    font-size: 0.7rem;
+
+                    &:hover{
+                        background: #404040;
+                    }
+
+                    &:disabled{
+                        background: #303030;
+                        cursor: not-allowed;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 800px) {
