--- a/src/components/NewScrim.scss
+++ b/src/components/NewScrim.scss
@@ -8,13 +8,15 @@
     margin-left: auto;
     margin-right: auto;
     padding: 2rem;
-    border-radius: 0.5rem;
+    // border-radius: 0.5rem;
 
     .new-scrim__title{
         margin:0;
         padding: 0;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
         text-align: center;
+        font-size: 1.75rem;
+        font-weight: 600;
     }
 
     .new-scrim-input{
@@ -23,8 +25,10 @@
         max-width: 450px;
         height: 3rem;
         outline: none;
-        border: 1px solid #c4c4c4;
-        border-radius: 0.5rem;
+        // border: 1px solid #c4c4c4;
+        background-color: white;
+        border: 2px solid #cecdcd;
+        // border-radius: 0.5rem;
         padding: 0.75rem;
         font-size: 1rem;
         margin-top: 1rem;
@@ -41,25 +45,25 @@
         max-width: 450px;
         margin-left: auto;
         margin-right: auto;
-        background-color: #4267b2;
+        background-color: #12799b;
         color: white;
         border: none;
         text-transform: capitalize;
         font-weight: bold;
         letter-spacing: 2px;
         font-size: 0.8rem;
-        border-radius: 0.5rem;
+        // border-radius: 0.5rem;
         margin-top: 1.5rem;
         margin-bottom: 1rem;
         cursor: pointer;
 
         &:hover{
-            background-color: #4770c2;
+            background-color: #016f94;
         }
 
         &:disabled{
             cursor: not-allowed;
-            background-color: #4267b2;
+            background-color: rgb(104, 130, 182)
         }
     }
 }
@@ -67,5 +71,9 @@
 @media (min-width: 800px) {
     .new-scrim{
         margin-top: 0;
+
+        .new-scrim__title{
+            font-size: 2rem;
+        }
     }
 }
