--- a/src/components/Scrim.scss
+++ b/src/components/Scrim.scss
@@ -17,7 +17,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 10000;
+    z-index: 100000000;
 
     .output-pane{
         position: relative;
